Apply Tailwind css lib. Modulizing initialized socket server function.

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-body  { 
+/* body  { 
     background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
@@ -8,4 +8,4 @@ body  {
 
 .col-md-4 > * {
     font-size: 13px;
-}
+} */
